--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+		body{
+            background: #f5f5f5;
+        }
+
+        .main-container{
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            padding: 40px;
+        }
+
+        .container-2, .container-3{
+              background-color: white;
+              padding: 10px 25px;
+              /* border: 0.5px solid black; */
+        }
+
+        i{
+            float: right;
+        }
