--- a/styles.css
+++ b/styles.css
@@ -4,21 +4,17 @@
         }
 
         .main-container{
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            padding: 40px;
+            background-color:#f5f5f5;
+			padding:30px;
         }
 
         .container-2, .container-3{
-              background-color: white;
-              padding: 10px 25px;
-              /* border: 0.5px solid black; */
+              background-color:white;
+			  margin:10px;
         }
 
-		p{
-			text-align: left;
-		}
-        i{
-            float: right;
+
+        .t-end{
+            text-align:right;
+			font-style:italic;
         }
